# sagemaker-feature-store-spark

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  THIRD-PARTY-LICENSES.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  integration-tests.yml  main.yml
ci/: buildspec.yml
pyspark-sdk/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
pyspark-sdk/integration_test/: BatchIngestionTest.py  LakeFormationHiveIngestionTest.py  LakeFormationIcebergIngestionTest.py  _lf_test_common.py  run-spark-integration-test
pyspark-sdk/src/feature_store_pyspark/: FeatureStoreManager.py  __init__.py
pyspark-sdk/tests/: test_feature_store_manager.py
scala-spark-sdk/: .scalafmt.conf  README.md  build.sbt
scala-spark-sdk/project/: plugins.sbt
scala-spark-sdk/src/main/scala/: ProgramOffline.scala
scala-spark-sdk/src/main/scala-spark-3.1-3.4/software/amazon/sagemaker/featurestore/sparksdk/: SparkRowEncoderAdaptor.scala
scala-spark-sdk/src/main/scala-spark-3.5/software/amazon/sagemaker/featurestore/sparksdk/: SparkRowEncoderAdaptor.scala
scala-spark-sdk/src/main/scala/software/amazon/sagemaker/featurestore/sparksdk/: FeatureStoreManager.scala  SparkRowEncoderAdaptorLike.scala
scala-spark-sdk/src/test/scala-spark-3.5/software/amazon/sagemaker/featurestore/sparksdk/: FeatureStoreManagerLakeFormationTest.scala
scala-spark-sdk/src/test/scala/software/amazon/sagemaker/featurestore/sparksdk/: FeatureStoreManagerTest.scala
(+39 files in other folders)
